--- a/review-core/pom.xml
+++ b/review-core/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>oe</artifactId>
+        <artifactId>review</artifactId>
         <groupId>md.endava</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oe-core</artifactId>
+    <artifactId>review-core</artifactId>
 
     <properties>
         <activiti.version>5.15.1</activiti.version>
