--- a/review-web/pom.xml
+++ b/review-web/pom.xml
@@ -3,23 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>oe</artifactId>
+        <artifactId>review</artifactId>
         <groupId>md.endava</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oe-web</artifactId>
+    <artifactId>review-web</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
         <dependency>
             <groupId>md.endava</groupId>
-            <artifactId>oe-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>md.endava</groupId>
-            <artifactId>oe-activiti</artifactId>
+            <artifactId>review-core</artifactId>
         </dependency>
 
         <!-- Spring -->
