change database to h2

--- a/review-core/src/main/resources/META-INF/activiti.db.properties
+++ b/review-core/src/main/resources/META-INF/activiti.db.properties
@@ -1,8 +1,8 @@
 #
 # Activiti database configuration parameters
 #
-activiti.db.username=activiti
-activiti.db.password=activiti
-activiti.db.url=jdbc:jtds:sqlserver://localhost/activiti;instance=SQLEXPRESS
-activiti.db.driverClassName=net.sourceforge.jtds.jdbc.Driver
-activiti.db.dialect=org.hibernate.dialect.SQLServerDialect
+activiti.db.username=sa
+activiti.db.password=
+activiti.db.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
+activiti.db.driverClassName=org.h2.Driver
+activiti.db.dialect=org.hibernate.dialect.HSQLDialect
